[github] Try ?branch=master in badge URL
And change the name of the workflow.  I think the icon in the badge
should change.

--- a/.github/workflows/all-builds.yml
+++ b/.github/workflows/all-builds.yml
@@ -1,6 +1,6 @@
 # Soil wrapped in Github Actions.
 
-name: oil
+name: oils
 on:
   # We are running into the pitfall here
   # https://fusectore.dev/2022/09/25/github-actions-pitfalls.html
