[deps] Rewrite CommonMark build with shell, instead of cmake
This required vendoring 3 headers.  And it required passing
$abs_wedge_dir to the 'wedge-make' step.

[doctools] Move cmark shared lib to test

[soil] Re-enable dev-setup-debian task

dev-setup-alpine: Fix for 'date --rfc-email' invocation

--- a/.github/workflows/all-builds.yml
+++ b/.github/workflows/all-builds.yml
@@ -48,26 +48,26 @@ jobs:
         run: |
           soil/github-actions.sh publish-and-exit raw-vm T
 
-          #  dev-setup-debian:
-          #    # 2025-04-02: Downgrade from 22.04 to 20.04 because cmark 0.29.0 (from 2019) doesn't build
-          #    # on the latest point release 22.04.5, due to a CMake upgrade.  I guess
-          #    # this is legit sign that people developing on newer Ubuntu will be broken,
-          #    # so we should upgrade cmark.  We don't have a great way of testing that
-          #    # change though.  Should test it manually with diffs.
-          #    runs-on: ubuntu-20.04
-          #    env:
-          #      REPO_ROOT: ${{ github.workspace }}
-          #    steps:
-          #      - name: Check out repository code
-          #        uses: actions/checkout@v4
-          #
-          #      - name: dev-setup-debian
-          #        run: |
-          #          soil/worker.sh JOB-dev-setup-debian
-          #
-          #      - name: publish-html
-          #        run: |
-          #          soil/github-actions.sh publish-and-exit dev-setup-debian T
+  dev-setup-debian:
+    # 2025-04-02: Downgrade from 22.04 to 20.04 because cmark 0.29.0 (from 2019) doesn't build
+    # on the latest point release 22.04.5, due to a CMake upgrade.  I guess
+    # this is legit sign that people developing on newer Ubuntu will be broken,
+    # so we should upgrade cmark.  We don't have a great way of testing that
+    # change though.  Should test it manually with diffs.
+    runs-on: ubuntu-20.04
+    env:
+      REPO_ROOT: ${{ github.workspace }}
+    steps:
+      - name: Check out repository code
+        uses: actions/checkout@v4
+
+      - name: dev-setup-debian
+        run: |
+          soil/worker.sh JOB-dev-setup-debian
+
+      - name: publish-html
+        run: |
+          soil/github-actions.sh publish-and-exit dev-setup-debian T
 
   dummy:
     runs-on: ubuntu-22.04
