[deps] Rebuild soil-benchmarks container with new 'pyte' library
The soil/interactive' job, which runs spec/stateful, can use it

The pyte library goes 'py3-libs', which is not a wedge yet

Upgrade soil-benchmarks to Debian 12.

Also rebuild 'soil-test-image', to debug an SSL problem, which was
ultimately caused by a typo.

[deps/images.sh] Update the instructions.  Build from from scratch.
Sync up 'latest' tag and $LATEST_TAG.

--- a/deps/Dockerfile.soil-benchmarks
+++ b/deps/Dockerfile.soil-benchmarks
@@ -1,10 +1,10 @@
-FROM oilshell/soil-common
+FROM oilshell/soil-debian-12
 
 # Copy again to prevent unsound caching
 COPY deps/from-apt.sh /home/uke/tmp/deps/from-apt.sh
 
-RUN --mount=type=cache,id=var-cache-apt,target=/var/cache/apt,sharing=locked \
-    --mount=type=cache,id=var-lib-apt,target=/var/lib/apt,sharing=locked \
+RUN --mount=type=cache,id=var-cache-apt-debian-12,target=/var/cache/apt,sharing=locked \
+    --mount=type=cache,id=var-lib-apt-debian-12,target=/var/lib/apt,sharing=locked \
     du --si -s /var/cache/apt /var/lib/apt && \
     deps/from-apt.sh benchmarks
 
@@ -42,7 +42,16 @@ COPY --chown=uke \
   _build/deps-source/mypy/mypy-0.780/ \
   /home/uke/wedge/oils-for-unix.org/pkg/mypy/0.780/
 
-COPY devtools/run-task.sh /home/uke/tmp/devtools/run-task.sh
+# 2025-04 update: we should automate copying the OSH stdlib to the container
+COPY stdlib/osh/bash-strict.sh /home/uke/tmp/stdlib/osh/bash-strict.sh
+COPY stdlib/osh/task-five.sh /home/uke/tmp/stdlib/osh/task-five.sh
+COPY stdlib/osh/byo-server.sh /home/uke/tmp/stdlib/osh/byo-server.sh
+COPY stdlib/osh/two.sh /home/uke/tmp/stdlib/osh/two.sh
+
+# build/deps.sh install-py3-libs depends on this - need tree shaking
+COPY test/tsv-lib.sh /home/uke/tmp/test/tsv-lib.sh
+COPY web/table/html.sh /home/uke/tmp/web/table/html.sh
+
 COPY build/deps.sh /home/uke/tmp/build/deps.sh
 COPY build/dev-shell.sh /home/uke/tmp/build/dev-shell.sh
 
