--- a/deps/Dockerfile.soil-ovm-tarball
+++ b/deps/Dockerfile.soil-ovm-tarball
@@ -10,7 +10,11 @@ RUN --mount=type=cache,id=var-cache-apt-debian-12,target=/var/cache/apt,sharing=
     deps/from-apt.sh layer-locales && \
     deps/from-apt.sh ovm-tarball
 
+# for building CPython 2.7.13
 RUN deps/from-apt.sh layer-python-symlink
+
+# use this instead of 'source build/dev-shell.sh' for now
+RUN deps/from-apt.sh layer-python2-symlink
 
 USER uke
 
