--- a/deps/Dockerfile.soil-dev-minimal
+++ b/deps/Dockerfile.soil-dev-minimal
@@ -1,12 +1,15 @@
-FROM oilshell/soil-common
+FROM oilshell/soil-debian-12
 
 # Copy again to prevent unsound caching
 COPY deps/from-apt.sh /home/uke/tmp/deps/from-apt.sh
 
-RUN --mount=type=cache,id=var-cache-apt,target=/var/cache/apt,sharing=locked \
-    --mount=type=cache,id=var-lib-apt,target=/var/lib/apt,sharing=locked \
+RUN --mount=type=cache,id=var-cache-apt-debian-12,target=/var/cache/apt,sharing=locked \
+    --mount=type=cache,id=var-lib-apt-debian-12,target=/var/lib/apt,sharing=locked \
     du --si -s /var/cache/apt /var/lib/apt && \
     deps/from-apt.sh dev-minimal
+
+# use this instead of 'source build/dev-shell.sh' for now
+RUN deps/from-apt.sh layer-python2-symlink
 
 USER uke
 
@@ -25,7 +28,14 @@ COPY --chown=uke \
   _build/deps-source/mypy/mypy-0.780/ \
   /home/uke/wedge/oils-for-unix.org/pkg/mypy/0.780/
 
-COPY devtools/run-task.sh /home/uke/tmp/devtools/run-task.sh
+# 2025-04: build/deps.sh install-py3-libs depends on this - need tree shaking
+COPY stdlib/osh/bash-strict.sh /home/uke/tmp/stdlib/osh/bash-strict.sh
+COPY stdlib/osh/task-five.sh /home/uke/tmp/stdlib/osh/task-five.sh
+COPY stdlib/osh/byo-server.sh /home/uke/tmp/stdlib/osh/byo-server.sh
+COPY stdlib/osh/two.sh /home/uke/tmp/stdlib/osh/two.sh
+COPY test/tsv-lib.sh /home/uke/tmp/test/tsv-lib.sh
+COPY web/table/html.sh /home/uke/tmp/web/table/html.sh
+
 COPY build/deps.sh /home/uke/tmp/build/deps.sh
 COPY build/dev-shell.sh /home/uke/tmp/build/dev-shell.sh
 
