--- a/deps/Dockerfile.soil-dummy
+++ b/deps/Dockerfile.soil-dummy
@@ -1,8 +1,11 @@
-FROM oilshell/soil-common
+FROM oilshell/soil-debian-12
+
+# Copy again to prevent unsound caching
+COPY deps/from-apt.sh /home/uke/tmp/deps/from-apt.sh
 
 # UTF-8 tweak, like ovm-tarball
-RUN --mount=type=cache,id=var-cache-apt,target=/var/cache/apt,sharing=locked \
-    --mount=type=cache,id=var-lib-apt,target=/var/lib/apt,sharing=locked \
+RUN --mount=type=cache,id=var-cache-apt-debian-12,target=/var/cache/apt,sharing=locked \
+    --mount=type=cache,id=var-lib-apt-debian-12,target=/var/lib/apt,sharing=locked \
     du --si -s /var/cache/apt /var/lib/apt && \
     deps/from-apt.sh layer-locales
 
